--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,10 @@
 ---
 layout: default
-page.background: '/assets/bugreport.jpg'
 ---
 
 <!-- Page Header -->
-{% if page.background %}
-<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+{% if site.background %}
+<header class="masthead" style="background-image: url('{{ site.background | prepend: site.baseurl | replace: '//', '/' }}')">
 {% else %}
 <header class="masthead">
 {% endif %}
