--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: default
 {% else %}
 <header class="masthead">
 {% endif %}
+  <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
@@ -17,7 +18,7 @@ layout: default
           <h2 class="subheading">{{ page.subtitle }}</h2>
           {% endif %}
           <span class="meta">Posted by
-            <a href="#">Start Bootstrap</a>
+            <a href="#">The Bug Report</a>
             on {{ page.date | date: '%B %d, %Y' }}</span>
         </div>
       </div>
