--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,6 +17,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/posts" | relative_url }}">Posts</a>
         </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/bug_report_mp3.rss" | relative_url }}">RSS MP3</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
