--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{"/bug_report_mp3.rss" | relative_url }}">RSS MP3</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{"/bug_report_mp3.rss" | relative_url }}">RSS OGG</a>
+        </li>
       </ul>
     </div>
   </div>
