--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="{{"/bug_report_mp3.rss" | relative_url }}">RSS MP3</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/bug_report_mp3.rss" | relative_url }}">RSS OGG</a>
+          <a class="nav-link" href="{{"/bug_report_ogg.rss" | relative_url }}">RSS OGG</a>
         </li>
       </ul>
     </div>
